syntax = "proto3";

package maintenance;
option csharp_namespace = "GrpcMaintenance.Protos.Maintenance";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service MaintenanceService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse){
    option(google.api.http)={
      post:"/v1/order",
      body:"*"
    };
  }
  rpc GetOrders (google.protobuf.Empty) returns (OrdersResponse){
    option(google.api.http)={
      get:"/v1/orders",
    };
  }
}

message CreateOrderRequest {
  int32 userId = 1;
  int32 equipmentId = 2;
}

message OrderResponse {
  int32 id = 1;
  int32 userId = 2;
  int32 equipmentId = 3;
  string state = 4;
  string dateCreated = 5;
  string userName = 6;        // opcional
  string equipmentName = 7;   // opcional
}

message OrdersResponse {
  repeated OrderResponse orders = 1;
}
